--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -32,7 +32,7 @@ jobs:
 
 ##        uses: appleboy/scp-action@v0.0.1
 #        with:
-#          host: ${{ secrets.HOST }}
+#          host: ${{ secrets.HOST }}1
 #          username: ${{ secrets.USERNAME }}
 #          password: ${{ secrets.PASSWORD }}
 #          port: ${{ secrets.PORT }}
