--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -20,21 +20,11 @@ jobs:
       - name: 打包
         run: npm run build
       - name: 复制dist文件with scp
-        uses: c0c1/scp-action@v1.0
+        uses: appleboy/scp-action@v0.0.1
         with:
-          src: "dist/"
           host: ${{ secrets.HOST }}
-          remote: ${{ secrets.TARGET }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
-          user: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
-
-
-##        uses: appleboy/scp-action@v0.0.1
-#        with:
-#          host: ${{ secrets.HOST }}
-#          username: ${{ secrets.USERNAME }}
-#          password: ${{ secrets.PASSWORD }}
-#          port: ${{ secrets.PORT }}
-#          source: "dist/"
-#          target: ${{ secrets.TARGET }}
+          source: "dist/"
+          target: ${{ secrets.TARGET }}
