--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,7 +24,8 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
+#          password: ${{ secrets.PASSWORD }}
+          key: ${{ secrets.KEY }} # 添加这一行如果你使用密钥认证
           port: ${{ secrets.PORT }}
           source: "dist"
-          target: ${{ secrets.TARGET }}
+          target: "/root/test"
