--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "typescript": "^5.7.2",
     "viewerjs": "^1.11.7",
     "vue": "^3.4.15",
+    "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.2.5",
-    "vuedraggable": "^4.1.0",
     "ws": "^8.17.0",
     "xlsx": "^0.18.5"
   },
