--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/lodash-es": "^4.17.12",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "dotenv": "^16.4.7",
     "less": "^4.2.0",
     "prettier": "^3.1.1",
     "rimraf": "^6.0.1",
