--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.13.10",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "dotenv": "^16.4.7",
