--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "design": "^0.1.0",
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lodash-es": "^4.17.21",
     "mysql": "^2.18.1",
     "pinia": "^2.1.7",
