--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
     },
     "types": ["vite/client"],
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "components.d.ts"],
 }
