--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,6 @@
 VITE_HOST_URL = localhost:9001
 VITE_ENV=local
+
+VITE_GITHUB_CLIENT_ID=Ov23liuOPhDka7KkXrpQ
+VITE_GITHUB_CLIENT_SECRET=9c899f7920f8385275f35076fdf6a6b4beb3d7c6
+VITE_GITHUB_REDIRECT_URI=https://boluo66.top/#/auth/callback
